@@ -27,12 +27,12 @@ and using CIAO.
   <li>Project <a href="releasenotes/index.html">Status (aka. release
       notes.)</a><p>
 
+  <li><a href="../NEWS">What's NEW about CIAO</a>  :-) <p>
+
+<!--      
   <li>This <a href="new_components.html">page on implementing new
       component</a> explains all the user-defined and tool-generated
       files when implementing a component.<p>
-
-  <li>A <a href="TODO.html">list of things</a> that we know need to be
-      done. :)  <p>
 
   <li>The <a href="ConfigValues.html">Configuration Name/Value
       lists</a> lists all the configuration values that CIAO will pass
@@ -41,7 +41,7 @@ and using CIAO.
       developers.  The information that matters for most users is how
       these configurations are represented in various XML
       descriptors and CIDL specifications.<p>
-
+-->
   <li>CIAO uses some <a href="EnvVars.html">environment variables</a>
       to manage the internal behaviors.
 </ul>
@@ -61,13 +61,13 @@ browse the related part from the following list:
       </a></li>
   <li><a href="imgs/extended-container.png"> Extended container
       interfaces </a></li>
-  <li><a href="imgs/deployment.png"> Deployment and installation
+  <li><a href="imgs/deployment.png"> Deployment and configuration (DAnCE)
       interfaces </a></li>
 </UL>
 All these diagrams are generating from the <a href="imgs/CCM.vsd">CCM.vsd
 Visio file</a> (The same file in Visio V.5 format is <a href="imgs/CCM-v5.vsd">here</a>.)
 
-<h2>CIAO part-by-part</h2>
+<h2>CIAO's D&C Framework (DAnCE) part-by-part</h2>
 
 Here is a list of the major elements of CIAO that a user should be aware of.
 
@@ -101,18 +101,13 @@ describing its key features and illustrating how to write CCM
 applications in C++. <P>
 
   <li><a
-href="./tutorial/Hello"><code>$(CIAO_ROOT)/docs/tutorial/Hello.</code></a>
-This example shows the low level infomation about CIAO
-Component/Component Home creation and deletion.</li><P>
-
-  <li><a
-href="../examples/Hello"><code>$(CIAO_ROOT)/examples/Hello.</code></a>
-This example illustrates how to build a CIAO based application <a
-href="../examples/Hello/step-by-step.html">step-by-step</a>. There is
+href="../examples/Hello"><code>$(CIAO_ROOT)/DAnCE/examples/Hello.</code></a>
+This example illustrates how to build and deploy a CIAO based application <a
+href="../DAnCE/examples/Hello/step-by-step.html">step-by-step</a>. There is
 also a detailed documentation explaining this example avalable in both
-<a href="http://www.dre.vanderbilt.edu/~lu/CCM/CCM_Hello_example.PDF">
+<a href="http://www.dre.vanderbilt.edu/~dengg/CCM/CCM_Hello_example.pdf">
 PDF</a> and <a
-href="http://www.dre.vanderbilt.edu/~lu/CCM/CCM_Hello_example.ppt">
+href="http://www.dre.vanderbilt.edu/~dengg/CCM/CCM_Hello_example.ppt">
 PowerPoint</a> format.</li>
 
 </UL>
